// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`badge should render 1`] = `
<div
  class="sc-bdVaJa AbQKQ"
  data-testid="badge"
>
  <test-file-stub
    image="test-file-stub"
  />
</div>
`;

exports[`matches snapshot 1`] = `
<test-file-stub
  image="test-file-stub"
/>
`;
